--- a/autorandr/.config/autorandr/dock/config
+++ b/autorandr/.config/autorandr/dock/config
@@ -1,8 +1,6 @@
-output DP1
+output DP-1
 off
-output VIRTUAL1
-off
-output LVDS1
+output LVDS-1
 off
 output HDMI-1
 mode 1920x1080
@@ -13,3 +11,4 @@ output VGA-1
 mode 1680x1050
 pos 1920x0
 rate 59.95
+rotate left
