--- a/i3blocks/.config/i3blocks/config
+++ b/i3blocks/.config/i3blocks/config
@@ -1,5 +1,11 @@
 separator_block_width=14
 
+[record]
+command=cat /tmp/recordingicon
+interval=once
+color=#ff0000
+signal=3
+
 [arch-update]
 command=~/.config/i3blocks/scripts/arch-update 
 interval=3600
