--- a/autorandr/.config/autorandr/home/config
+++ b/autorandr/.config/autorandr/home/config
@@ -1,18 +1,18 @@
 output DisplayPort-0
 off
-output DisplayPort-1
-off
 output DisplayPort-2
 off
 output DVI-D-0
+off
+output DisplayPort-1
 crtc 1
 mode 1680x1050
-pos 0x0
+pos 1920x0
 rate 59.95
-rotate left
+rotate right
 output HDMI-A-0
 crtc 0
 mode 1920x1080
-pos 1050x600
+pos 0x600
 primary
 rate 60.00
